FIx whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -778,8 +778,7 @@ ol {
 }
 ol > li::marker { content: counters(ordered, '.') }
 summary::marker { content: '🔴' }
-dd, dt, li {
-}
+dd, dt, li {}
 dd {}
 dt {}
 li {}
